[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Textures/StoryCaroline/CarolineStatic-3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/StoryCaroline/CarolineStatic-2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Stories/StoryCaroline/clouds.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Stories/StoryCaroline/RijekaAttackedScene.gd" type="Script" id=4]
[ext_resource path="res://Assets/Katkuk-Regular.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Textures/StoryCaroline/manBehindBarrel.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/StoryCaroline/horse.png" type="Texture" id=7]
[ext_resource path="res://Assets/Katkuk-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Textures/StoryCaroline/CarolineSmallAnim1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Textures/StoryCaroline/CarolineSmallAnim2.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1095.59, 219.003 )

[sub_resource type="Animation" id=2]
length = 1.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 0, 1, 2, 3, 4, 5, 6, 7, 8, 0, 1, 2, 3, 4, 5, 6, 7, 8, 8, 8, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.49977 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2446.77, 795.315 ), Vector2( -304.119, 795.315 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.50742, 1.53623 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Animation" id=3]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 6, 5, 5, 4, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.3, 0.7, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 454.97, 1063.6 ), Vector2( 564.847, 918.087 ), Vector2( 564.847, 918.087 ), Vector2( 454.97, 1063.6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.95, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.65
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 7, 6, 5 ]
}

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=6]
resource_name = "explosion"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "explosion"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "explosion"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="RijekaAttackedScene" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -37.0
margin_top = -30.0
margin_right = 2288.0
margin_bottom = 1497.0
rect_rotation = -0.136783
mouse_filter = 2
color = Color( 0.0941176, 0.501961, 0.352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clouds" parent="." instance=ExtResource( 3 )]

[node name="Floor" type="Sprite" parent="."]
position = Vector2( 1133.27, 1251.33 )
scale = Vector2( 1.14608, 1.35825 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( -24.8425, 1374.46, 2113.09, 671.181 )

[node name="clickForBlackBirds" type="Area2D" parent="."]
z_index = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="clickForBlackBirds"]
position = Vector2( 1127.05, 685.757 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="City" type="Sprite" parent="."]
position = Vector2( 1123.99, 618.169 )
scale = Vector2( 1.04217, 0.962741 )
z_index = 9
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( -7.59338, 753.97, 1872.69, 777.097 )

[node name="Horse" type="Sprite" parent="."]
position = Vector2( 2446.77, 795.315 )
scale = Vector2( 0.809139, 0.809139 )
z_index = 10
texture = ExtResource( 7 )
hframes = 3
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Horse"]
autoplay = "horseRunning"
playback_speed = 0.6
anims/horseRunning = SubResource( 2 )

[node name="ManBehindTheBarrel" type="Sprite" parent="."]
position = Vector2( 454.97, 1063.6 )
scale = Vector2( 1.00302, 0.970136 )
z_index = 11
texture = ExtResource( 6 )
hframes = 3
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="ManBehindTheBarrel"]
anims/ManAppears = SubResource( 3 )

[node name="NextSceneButton" type="Button" parent="."]
visible = false
margin_left = 1424.34
margin_top = 1350.38
margin_right = 1962.34
margin_bottom = 1471.38
custom_fonts/font = ExtResource( 5 )
text = "NEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="barrels" type="Area2D" parent="."]
z_index = 12

[node name="Barrel2" type="Sprite" parent="barrels"]
position = Vector2( 240.365, 1121.7 )
rotation = -1.55985
scale = Vector2( 1.37512, 1.29598 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 645.988, 0, 361.763, 301.691 )

[node name="Barrel1" type="Sprite" parent="barrels"]
position = Vector2( 584.738, 1242.86 )
scale = Vector2( 1.39097, 1.34537 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 287.706, 7.37658, 356.243, 299.725 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="barrels"]
polygon = PoolVector2Array( 28.9328, 1330.63, 321.148, 1369.83, 424.492, 1441.1, 638.307, 1455.36, 834.305, 1387.65, 787.979, 1027.73, 552.781, 920.819, 367.474, 842.42, 61.0051, 842.42 )

[node name="fire" type="Sprite" parent="."]
position = Vector2( 1762.99, 1356.97 )
scale = Vector2( 2.35136, 2.35136 )
z_index = 11
z_as_relative = false
texture = ExtResource( 9 )
hframes = 5
vframes = 5
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="fire"]
autoplay = "fire"
anims/fire = SubResource( 4 )

[node name="birdContainer" type="Node2D" parent="."]
z_index = 8

[node name="labelContainer" type="Node2D" parent="."]
z_index = 100

[node name="Label" type="Label" parent="labelContainer"]
self_modulate = Color( 0.129412, 0.129412, 0.129412, 1 )
margin_left = 1284.31
margin_top = 1257.0
margin_right = 2050.31
margin_bottom = 1550.0
custom_fonts/font = SubResource( 5 )
text = "All the citizens were very scared and did not know what to do.
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boom1" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( 1487.68, 905.378 )
scale = Vector2( 0.639593, 0.639593 )
z_index = 10
texture = ExtResource( 10 )
hframes = 5
vframes = 5
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="boom1"]
playback_speed = 1.5
anims/explosion = SubResource( 6 )

[node name="boom2" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( 550.623, 654.428 )
scale = Vector2( 0.639593, 0.639593 )
z_index = 10
texture = ExtResource( 10 )
hframes = 5
vframes = 5
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="boom2"]
playback_speed = 1.5
anims/explosion = SubResource( 7 )

[node name="boom3" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( 756.189, 1404.61 )
scale = Vector2( 0.906562, 0.906562 )
z_index = 13
texture = ExtResource( 10 )
hframes = 5
vframes = 5
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="boom3"]
playback_speed = 1.5
anims/explosion = SubResource( 8 )

[node name="Timer1" type="Timer" parent="."]
autostart = true

[connection signal="input_event" from="clickForBlackBirds" to="." method="_on_clickForBlackBirds_input_event"]
[connection signal="input_event" from="barrels" to="." method="_on_barrels_input_event"]
